renomeei as imagens e troque o background da div pai do form

--- a/src/index.css
+++ b/src/index.css
@@ -107,8 +107,7 @@ p{
 }
 
 ._section_3 {
-    /* background: #E0EAF4; */
-    background: #9E63A8;
+    background: #E0EAF4;
     justify-content: space-evenly;
 }
 
